tdf#164950 Set GtkCssProvider at APPLICATION level, not USER

- when set at the user level, the set_background() calls
  cannot override the theme settings as USER level has
  higher priority than APPLICATION level.

Change-Id: If8819b5838f6f9ff1cf5ec83e380b7546aafce93
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180977
Tested-by: Jenkins
Reviewed-by: Sahil Gautam <sahil.gautam.extern@allotropia.de>
(cherry picked from commit 94eb08183ac2be67f11d45e6ad8e703d39115246)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198084
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Sahil Gautam <sahil.gautam@collabora.com>